introduce domain properties